[package]
authors = ["Aleksandr Liashenko <icealexxx@gmail.com>"]
edition = "2018"
name = "tiny_pomodoro"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
chrono = {version = "0.4", features = ["serde"]}
colorsys = "0.6.5"
dirs = "4.0.0"
serde = {version = "1.0.132", features = ["derive"]}
serde_yaml = "0.8"

# Sound
rodio = {version = "0.14.0", features = ["wav"], default-features = false}

# Ui
eframe = {version = "0.16.0", features = ["egui_glow"], default-features = false}

# SVG Render
resvg = "0.19.0"
tiny-skia = "0.6.1"
usvg = "0.19.0"

[patch.crates-io]
# eframe = {path = "../egui/eframe"}
eframe = {git = "https://github.com/AlexxxRu/egui.git", branch = "bugfix/drag_window"}

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
